# aignitelearn

./: LICENSE  README.md
flask-server/: .flaskenv  .gitignore  config.py  database.sql  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  test.rest
flask-server/app/: __init__.py  app.py  models.py
flask-server/app/routes/: auth_routes.py  dashboard_routes.py  goals_routes.py
flask-server/app/static/css/: dashboard.css  onboard.css  site.css
flask-server/app/static/js/: calendar.js  dashboard.js  immersive_reder_helper.js  mychart.js
flask-server/app/templates/: blogs.html  chat.html  dashboard.html  profile.html
flask-server/app/templates/auth/: login.html  onboard.html  resend_onboard_mail.html  signup.html
flask-server/app/templates/layouts/: base.html
flask-server/app/templates/mail/: confirm_registration.html  login_alert.html
flask-server/app/utils/: common.py  constants.py  forms.py  mail.py
flask-server/migrations/versions/: 313016260a9a_added_isverifed_field.py  6f399d36ad7f_modified_users_goals_table.py  7e91aaab33ad_added_goalname_field_in_goals_table.py  9203c0438101_added_roadmap_data_field_in_goals_table.py  9ad3a40bad4e_.py  c1de2f22ae74_modified_user_table.py  fd44b49d9ffc_.py
flask-server/tests/: test_app.py
skill-sync/client/: index.html  package-lock.json  package.json  vite.config.js
skill-sync/client/public/: goalLanding.html  graph.html  output.json  roadmap.html
skill-sync/client/src/: App.jsx  Constants.js  index.css  (+1 more)
skill-sync/server/: index.js  index.test.js  package-lock.json  package.json  test.rest
(+17 files in other folders)
